# server/docs/swagger.yaml
@@ -656,6 +656,12 @@ definitions:
       addr:
         description: 端口值
         type: integer
+      app-id:
+        description: 小程序AppID
+        type: string
+      app-secret:
+        description: 小程序AppSecret
+        type: string
       db-type:
         description: 数据库类型:mysql(默认)|sqlite|sqlserver|postgresql
         type: string
@@ -1708,6 +1714,23 @@ definitions:
         description: 短息验证码
         type: string
     type: object
+  request.WxMobileLogin:
+    properties:
+      encryptedData:
+        type: string
+      iv:
+        type: string
+      mobileCode:
+        description: 获取手机号的code
+        type: string
+      openidCode:
+        description: 获取openId的code
+        type: string
+      rawData:
+        type: string
+      signature:
+        type: string
+    type: object
   response.Area:
     properties:
       districts:
@@ -1894,6 +1917,41 @@ definitions:
         type: string
       num:
         description: 房源数量
+        type: integer
+    type: object
+  search.StatisData:
+    properties:
+      ID:
+        description: 主键ID
+        type: integer
+      add:
+        description: 新增帖子
+        type: integer
+      add_saler:
+        description: 新增经纪人
+        type: integer
+      click:
+        description: 联系方式被点击数
+        type: integer
+      createdAt:
+        description: 创建时间
+        type: string
+      date:
+        type: string
+      follow:
+        description: 帖子关注数
+        type: integer
+      shared:
+        description: 帖子分享数
+        type: integer
+      updatedAt:
+        description: 更新时间
+        type: string
+      use_saler:
+        description: 使用的经纪人
+        type: integer
+      view:
+        description: 帖子浏览数
         type: integer
     type: object
   system.Condition:
@@ -2963,9 +3021,9 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/house.Resource'
+                  $ref: '#/definitions/search.StatisData'
               type: object
-      summary: 房源详情
+      summary: 数据中心
       tags:
       - Admin
   /api/syncApi:
@@ -7417,10 +7475,10 @@ paths:
       parameters:
       - description: 微信手机号授权code
         in: body
-        name: code
+        name: data
         required: true
         schema:
-          type: string
+          $ref: '#/definitions/request.WxMobileLogin'
       produces:
       - application/json
       responses:
